@@ -1,7 +1,6 @@
 package org.example.backend.service;
 
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
-import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
+import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import org.example.backend.common.exception.BusinessException;
 import org.example.backend.mapper.MemberMapper;
 import org.example.backend.mapper.NodeMapper;
@@ -15,7 +14,6 @@ import org.example.backend.model.entity.Node;
 import org.example.backend.model.entity.Role;
 import org.example.backend.model.entity.User;
 import org.example.backend.model.response.MemberView;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -24,85 +22,88 @@ import java.util.stream.Collectors;
 
 @Service
 public class MemberService {
-    @Autowired
-    private MemberMapper memberMapper;
-    @Autowired
-    private UserMapper userMapper;
-    @Autowired
-    private RoleMapper roleMapper;
-    @Autowired
-    private NodeMapper nodeMapper;
+    private final MemberMapper memberMapper;
+    private final UserMapper userMapper;
+    private final RoleMapper roleMapper;
+    private final NodeMapper nodeMapper;
+
+    public MemberService(MemberMapper memberMapper, UserMapper userMapper,
+                         RoleMapper roleMapper, NodeMapper nodeMapper) {
+        this.memberMapper = memberMapper;
+        this.userMapper = userMapper;
+        this.roleMapper = roleMapper;
+        this.nodeMapper = nodeMapper;
+    }
 
     @Transactional
     public void createMember(CreateMemberArgs args) {
         if (args == null) throw new BusinessException("");
 
         // 查询用户是否存在
-        LambdaQueryWrapper<User> userQuery = new LambdaQueryWrapper<>();
-        userQuery.eq(User::getUsername, args.getUsername())
-                .eq(User::getEnabled, 1)
-                .eq(User::getDeleted, 0);
-        User user = userMapper.selectOne(userQuery);
+        User user = userMapper.selectOne(
+                Wrappers.<User>lambdaQuery()
+                        .eq(User::getUsername, args.getUsername())
+                        .eq(User::getEnabled, 1)
+                        .eq(User::getDeleted, 0));
         if (user == null) throw new BusinessException("<UNK>");
 
         // 查询角色是否存在
-        LambdaQueryWrapper<Role> roleQuery = new LambdaQueryWrapper<>();
-        roleQuery.eq(Role::getId, args.getRoleId())
-                .eq(Role::getEnabled, 1)
-                .eq(Role::getDeleted, 0);
-        if (roleMapper.selectOne(roleQuery) == null) throw new BusinessException("<UNK>");
+        Role role = roleMapper.selectOne(
+                Wrappers.<Role>lambdaQuery()
+                        .eq(Role::getId, args.getRoleId())
+                        .eq(Role::getEnabled, 1)
+                        .eq(Role::getDeleted, 0));
+        if (role == null) throw new BusinessException("<UNK>");
 
         // 查询组织节点是否存在
-        LambdaQueryWrapper<Node> nodeQuery = new LambdaQueryWrapper<>();
-        nodeQuery.eq(Node::getId, args.getNodeId())
-                .eq(Node::getIsEnabled, 1)
-                .eq(Node::getIsDeleted, 0);
-        if (nodeMapper.selectOne(nodeQuery) == null) throw new BusinessException("<UNK>");
+        Node node = nodeMapper.selectOne(
+                Wrappers.<Node>lambdaQuery()
+                        .eq(Node::getId, args.getNodeId())
+                        .eq(Node::getIsEnabled, 1)
+                        .eq(Node::getIsDeleted, 0));
+        if (node == null) throw new BusinessException("<UNK>");
 
-        int memberInsertCount = memberMapper.insert(Member.builder()
-                        .userId(user.getId())
-                        .nodeId(args.getNodeId())
-                        .roleId(args.getRoleId())
-                        .build());
-        if (memberInsertCount != 1) throw new BusinessException("<UNK>");
+        Member member = Member.builder()
+                .userId(user.getId())
+                .nodeId(args.getNodeId())
+                .roleId(args.getRoleId())
+                .build();
+        int count = memberMapper.insert(member);
+        if (count != 1) throw new BusinessException("<UNK>");
     }
 
     @Transactional
     public void deleteMembers(DeleteMemberArgs args) {
-        if (args == null) throw new BusinessException("");
-
-        List<Long> memberIds = args.getMemberIds();
-        if (memberIds == null) throw new BusinessException("");
-
-        LambdaUpdateWrapper<Member> memberUpdate = new LambdaUpdateWrapper<>();
-        memberUpdate.set(Member::getDeleted, 1)
-                .in(Member::getId, memberIds);
-        int memberDeleteCount = memberMapper.update(memberUpdate);
-        if (memberDeleteCount != memberIds.size()) throw new BusinessException("<UNK>");
+        int count = memberMapper.update(
+                Wrappers.<Member>lambdaUpdate()
+                        .set(Member::getDeleted, 1)
+                        .in(Member::getId, args.getMemberIds()));
+        if (count != args.getMemberIds().size()) throw new BusinessException("<UNK>");
     }
 
     @Transactional
     public void updateMember(UpdateMemberArgs args) {
-        if (args == null) throw new BusinessException("");
-
         // 查询成员信息是否存在
-        LambdaQueryWrapper<Member> memberQuery = new LambdaQueryWrapper<>();
-        memberQuery.eq(Member::getId, args.getMemberId()).eq(Member::getDeleted, 0);
-        if (memberMapper.selectOne(memberQuery) == null) throw new BusinessException("<UNK>");
+        Member member = memberMapper.selectOne(
+                Wrappers.<Member>lambdaQuery()
+                        .eq(Member::getId, args.getMemberId())
+                        .eq(Member::getDeleted, 0));
+        if (member == null) throw new BusinessException("<UNK>");
 
         // 更新信息
-        LambdaUpdateWrapper<Member> memberUpdate = new LambdaUpdateWrapper<>();
-        memberUpdate.set(args.getNodeId() != null, Member::getNodeId, args.getNodeId())
-                .set(args.getRoleId() != null, Member::getRoleId, args.getRoleId())
-                .eq(Member::getId, args.getMemberId());
-        if (memberMapper.update(memberUpdate) != 1) throw new BusinessException("<UNK>");
+        int count = memberMapper.update(
+                Wrappers.<Member>lambdaUpdate()
+                        .set(Member::getNodeId, args.getNodeId())
+                        .set(Member::getRoleId, args.getRoleId())
+                        .eq(Member::getId, args.getMemberId()));
+        if (count != 1) throw new BusinessException("<UNK>");
     }
 
     public List<MemberView> listAllMembers() {
-        LambdaQueryWrapper<Member> memberQuery = new LambdaQueryWrapper<>();
-        memberQuery.eq(Member::getDeleted, 0);
-        List<Member> members = memberMapper.selectList(memberQuery);
-        if (members == null) return List.of();
+        List<Member> members = memberMapper.selectList(
+                Wrappers.<Member>lambdaQuery()
+                        .eq(Member::getDeleted, 0));
+        if (members == null || members.isEmpty()) return List.of();
 
         Set<Long> userIds = new HashSet<>();
         Set<Long> roleIds = new HashSet<>();
@@ -116,9 +117,11 @@ public class MemberService {
         // 查询用户信息
         Map<Long, User> userMap = new HashMap<>();
         if (!userIds.isEmpty()) {
-            LambdaQueryWrapper<User> userQuery = new LambdaQueryWrapper<>();
-            userQuery.eq(User::getEnabled, 1).eq(User::getDeleted, 0).in(User::getId, userIds);
-            List<User> users = userMapper.selectList(userQuery);
+            List<User> users = userMapper.selectList(
+                    Wrappers.<User>lambdaQuery()
+                            .eq(User::getEnabled, 1)
+                            .eq(User::getDeleted, 0)
+                            .in(User::getId, userIds));
             userMap.putAll(
                     users.stream().collect(Collectors.toMap(User::getId, user -> user, (k1, k2) -> k1))
             );
@@ -128,9 +131,11 @@ public class MemberService {
         // 查询角色信息
         Map<Long, Role> roleMap = new HashMap<>();
         if (!roleIds.isEmpty()) {
-            LambdaQueryWrapper<Role> roleQuery = new LambdaQueryWrapper<>();
-            roleQuery.eq(Role::getDeleted, 0).eq(Role::getEnabled, 1).in(Role::getId, roleIds);
-            List<Role> roles = roleMapper.selectList(roleQuery);
+            List<Role> roles = roleMapper.selectList(
+                    Wrappers.<Role>lambdaQuery()
+                            .eq(Role::getDeleted, 0)
+                            .eq(Role::getEnabled, 1)
+                            .in(Role::getId, roleIds));
             roleMap.putAll(
                     roles.stream().collect(Collectors.toMap(Role::getId, role -> role, (k1, k2) -> k1))
             );
@@ -139,9 +144,11 @@ public class MemberService {
         // 查询节点信息
         Map<Long, Node> nodeMap = new HashMap<>();
         if (!nodeIds.isEmpty()) {
-            LambdaQueryWrapper<Node> nodeQuery = new LambdaQueryWrapper<>();
-            nodeQuery.eq(Node::getIsDeleted, 0).eq(Node::getIsEnabled, 1).in(Node::getId, nodeIds);
-            List<Node> nodes = nodeMapper.selectList(nodeQuery);
+            List<Node> nodes = nodeMapper.selectList(
+                    Wrappers.<Node>lambdaQuery()
+                            .eq(Node::getIsDeleted, 0)
+                            .eq(Node::getIsEnabled, 1)
+                            .in(Node::getId, nodeIds));
             nodeMap.putAll(
                     nodes.stream().collect(Collectors.toMap(Node::getId, node -> node, (k1, k2) -> k1))
             );
@@ -160,23 +167,25 @@ public class MemberService {
                             .nodeName(node != null ? node.getNodeName() : "")
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return memberViews;
     }
 
     public List<Role> listOrgRoles() {
-        LambdaQueryWrapper<Role> roleQuery = new LambdaQueryWrapper<>();
-        roleQuery.eq(Role::getType, 2)
-                .eq(Role::getEnabled, 1)
-                .eq(Role::getDeleted, 0);
-        return roleMapper.selectList(roleQuery);
+        List<Role> orgRoles = roleMapper.selectList(
+                Wrappers.<Role>lambdaQuery()
+                        .eq(Role::getType, 2)
+                        .eq(Role::getEnabled, 1)
+                        .eq(Role::getDeleted, 0));
+        return orgRoles;
     }
 
     public List<Node> listOrgNodes() {
-        LambdaQueryWrapper<Node> nodeQuery = new LambdaQueryWrapper<>();
-        nodeQuery.eq(Node::getIsEnabled, 1)
-                .eq(Node::getIsDeleted, 0);
-        return nodeMapper.selectList(nodeQuery);
+        List<Node> orgNodes = nodeMapper.selectList(
+                Wrappers.<Node>lambdaQuery()
+                        .eq(Node::getIsEnabled, 1)
+                        .eq(Node::getIsDeleted, 0));
+        return orgNodes;
     }
 }
